fix(ui): MetricsTableTitle - vertical align icon

--- a/packages/ui/src/components/metrics-table-title/metrics-table-title.module.css
+++ b/packages/ui/src/components/metrics-table-title/metrics-table-title.module.css
@@ -14,6 +14,7 @@
 
 .anchorIcon {
   display: block;
+  margin: -2px 0; /* compensate for the vertical space */
 }
 
 .info {
